# schmiddys_cpp_bootstrapper

./: .gitignore  dev_paths.json
src/py/: main.py  scb.py
src/py/cmake_core/: scb_include.cmake  scb_toolchain.cmake
src/py/cmake_templates/default/: .gitignore  CMakeLists.txt
src/py/cmake_templates/default/src/cpp/: CMakeLists.txt  main.cpp
src/py/commands/: __init__.py  packages_cmd.py  project_cmd.py  template_cmd.py
src/py/project/: __init__.py
src/py/settings/: __init__.py  path_handler.py  paths.py
src/py/tools/: cmake_presets.py  externals.py
src/py/tools/vcpkg/: __init__.py
src/py/util/: __init__.py
